--- a/image.html
+++ b/image.html
@@ -169,6 +169,10 @@ function main() {
 <dt><pre><span class="Keyword">proc</span> <a href="#load%2Ccstring"><span class="Identifier">load</span></a><span class="Other">(</span><span class="Identifier">file</span><span class="Other">:</span> <span class="Identifier">cstring</span><span class="Other">)</span><span class="Other">:</span> <a href="image.html#GlTexture"><span class="Identifier">GlTexture</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
+<p>Loads GL texture.</p>
+<p>Arguments:</p>
+<ul class="simple"><li><tt class="docutils literal"><span class="pre">file</span></tt> - image path.</li>
+</ul>
 
 
 </dd>
@@ -182,7 +186,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-19 14:44:48 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-23 06:31:34 UTC</small>
       </div>
     </div>
   </div>
