--- a/rich_edit_text.html
+++ b/rich_edit_text.html
@@ -147,6 +147,8 @@ function main() {
     title="setTextAlign(self: RichEditTextPtr; align: AnchorRef)"><wbr />set<wbr />Text<wbr />Align<span class="attachedType">RichEditTextPtr</span></a></li>
   <li><a class="reference" href="#setTextAlign.e%2CRichEditTextPtr%2Cfloat%2Cfloat%2Cfloat%2Cfloat"
     title="setTextAlign(self: RichEditTextPtr; x1, y1, x2, y2: float)"><wbr />set<wbr />Text<wbr />Align<span class="attachedType">RichEditTextPtr</span></a></li>
+  <li><a class="reference" href="#setText.e%2CRichEditTextPtr%2CColorTextRef"
+    title="setText(self: RichEditTextPtr; value: ColorTextRef)"><wbr />set<wbr />Text<span class="attachedType">RichEditTextPtr</span></a></li>
 
   </ul>
 </li>
@@ -258,6 +260,13 @@ Changes text align.
 Changes text align.
 
 </dd>
+<a id="setText.e,RichEditTextPtr,ColorTextRef"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#setText.e%2CRichEditTextPtr%2CColorTextRef"><span class="Identifier">setText</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_edit_text.html#RichEditTextPtr"><span class="Identifier">RichEditTextPtr</span></a><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">:</span> <a href="color_text.html#ColorTextRef"><span class="Identifier">ColorTextRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
 
 </dl></div>
 
@@ -268,7 +277,7 @@ Changes text align.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-20 14:27:58 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-23 06:31:07 UTC</small>
       </div>
     </div>
   </div>
