--- a/rich_label.html
+++ b/rich_label.html
@@ -133,10 +133,14 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CRichLabelPtr%2CGLfloat%2CGLfloat"
     title="draw(self: RichLabelPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">RichLabelPtr</span></a></li>
+  <li><a class="reference" href="#dublicate.e%2CRichLabelPtr%2CRichLabelObj"
+    title="dublicate(self: RichLabelPtr; obj: var RichLabelObj): RichLabelPtr"><wbr />dublicate<span class="attachedType">RichLabelPtr</span></a></li>
   <li><a class="reference" href="#setTextAlign.e%2CRichLabelPtr%2CAnchorRef"
     title="setTextAlign(self: RichLabelPtr; align: AnchorRef)"><wbr />set<wbr />Text<wbr />Align<span class="attachedType">RichLabelPtr</span></a></li>
   <li><a class="reference" href="#setTextAlign.e%2CRichLabelPtr%2Cfloat%2Cfloat%2Cfloat%2Cfloat"
     title="setTextAlign(self: RichLabelPtr; x1, y1, x2, y2: float)"><wbr />set<wbr />Text<wbr />Align<span class="attachedType">RichLabelPtr</span></a></li>
+  <li><a class="reference" href="#setText.e%2CRichLabelPtr%2CColorTextRef"
+    title="setText(self: RichLabelPtr; value: ColorTextRef)"><wbr />set<wbr />Text<span class="attachedType">RichLabelPtr</span></a></li>
 
   </ul>
 </li>
@@ -209,6 +213,14 @@ function main() {
 
 
 </dd>
+<a id="dublicate.e,RichLabelPtr,RichLabelObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#dublicate.e%2CRichLabelPtr%2CRichLabelObj"><span class="Identifier">dublicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_label.html#RichLabelPtr"><span class="Identifier">RichLabelPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="rich_label.html#RichLabelObj"><span class="Identifier">RichLabelObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="rich_label.html#RichLabelPtr"><span class="Identifier">RichLabelPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span>
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="setTextAlign.e,RichLabelPtr,AnchorRef"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#setTextAlign.e%2CRichLabelPtr%2CAnchorRef"><span class="Identifier">setTextAlign</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_label.html#RichLabelPtr"><span class="Identifier">RichLabelPtr</span></a><span class="Other">;</span> <span class="Identifier">align</span><span class="Other">:</span> <a href="anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -218,6 +230,13 @@ function main() {
 </dd>
 <a id="setTextAlign.e,RichLabelPtr,float,float,float,float"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#setTextAlign.e%2CRichLabelPtr%2Cfloat%2Cfloat%2Cfloat%2Cfloat"><span class="Identifier">setTextAlign</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_label.html#RichLabelPtr"><span class="Identifier">RichLabelPtr</span></a><span class="Other">;</span> <span class="Identifier">x1</span><span class="Other">,</span> <span class="Identifier">y1</span><span class="Other">,</span> <span class="Identifier">x2</span><span class="Other">,</span> <span class="Identifier">y2</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
+<a id="setText.e,RichLabelPtr,ColorTextRef"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#setText.e%2CRichLabelPtr%2CColorTextRef"><span class="Identifier">setText</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rich_label.html#RichLabelPtr"><span class="Identifier">RichLabelPtr</span></a><span class="Other">;</span> <span class="Identifier">value</span><span class="Other">:</span> <a href="color_text.html#ColorTextRef"><span class="Identifier">ColorTextRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -233,7 +252,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-20 08:08:27 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-23 06:30:58 UTC</small>
       </div>
     </div>
   </div>
