--- a/texture_rect.html
+++ b/texture_rect.html
@@ -111,7 +111,8 @@ function main() {
   texture*: GLuint
   texture_mode*: TextureMode
   texture_size*: Vector2Ref
-  texture_anchor*: AnchorRef"><wbr />Texture<wbr />Rect<wbr />Obj<span class="attachedType"></span></a></li>
+  texture_anchor*: AnchorRef
+  texture_filter*: ColorRef"><wbr />Texture<wbr />Rect<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#TextureRectPtr"
     title="TextureRectPtr = ptr TextureRectObj"><wbr />Texture<wbr />Rect<wbr />Ptr<span class="attachedType"></span></a></li>
 
@@ -132,10 +133,18 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#draw.e%2CTextureRectPtr%2CGLfloat%2CGLfloat"
     title="draw(self: TextureRectPtr; w, h: GLfloat)"><wbr />draw<span class="attachedType">TextureRectPtr</span></a></li>
+  <li><a class="reference" href="#dublicate.e%2CTextureRectPtr%2CTextureRectObj"
+    title="dublicate(self: TextureRectPtr; obj: var TextureRectObj): TextureRectPtr"><wbr />dublicate<span class="attachedType">TextureRectPtr</span></a></li>
   <li><a class="reference" href="#loadTexture.e%2CTextureRectPtr%2Ccstring"
     title="loadTexture(self: TextureRectPtr; file: cstring)"><wbr />load<wbr />Texture<span class="attachedType">TextureRectPtr</span></a></li>
   <li><a class="reference" href="#setTexture.e%2CTextureRectPtr%2CGlTexture"
     title="setTexture(self: TextureRectPtr; gltexture: GlTexture)"><wbr />set<wbr />Texture<span class="attachedType">TextureRectPtr</span></a></li>
+  <li><a class="reference" href="#setTextureFilter.e%2CTextureRectPtr%2CColorRef"
+    title="setTextureFilter(self: TextureRectPtr; color: ColorRef)"><wbr />set<wbr />Texture<wbr />Filter<span class="attachedType">TextureRectPtr</span></a></li>
+  <li><a class="reference" href="#setTextureAnchor.e%2CTextureRectPtr%2CAnchorRef"
+    title="setTextureAnchor(self: TextureRectPtr; anchor: AnchorRef)"><wbr />set<wbr />Texture<wbr />Anchor<span class="attachedType">TextureRectPtr</span></a></li>
+  <li><a class="reference" href="#setTextureAnchor.e%2CTextureRectPtr%2Cfloat%2Cfloat%2Cfloat%2Cfloat"
+    title="setTextureAnchor(self: TextureRectPtr; x1, y1, x2, y2: float)"><wbr />set<wbr />Texture<wbr />Anchor<span class="attachedType">TextureRectPtr</span></a></li>
 
   </ul>
 </li>
@@ -161,6 +170,7 @@ function main() {
   <span class="Identifier">texture_mode</span><span class="Operator">*</span><span class="Other">:</span> <a href="enums.html#TextureMode"><span class="Identifier">TextureMode</span></a>
   <span class="Identifier">texture_size</span><span class="Operator">*</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a>
   <span class="Identifier">texture_anchor</span><span class="Operator">*</span><span class="Other">:</span> <a href="anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a>
+  <span class="Identifier">texture_filter</span><span class="Operator">*</span><span class="Other">:</span> <a href="color.html#ColorRef"><span class="Identifier">ColorRef</span></a>
 </pre></dt>
 <dd>
 
@@ -207,6 +217,14 @@ function main() {
 
 
 </dd>
+<a id="dublicate.e,TextureRectPtr,TextureRectObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#dublicate.e%2CTextureRectPtr%2CTextureRectObj"><span class="Identifier">dublicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_rect.html#TextureRectPtr"><span class="Identifier">TextureRectPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="texture_rect.html#TextureRectObj"><span class="Identifier">TextureRectObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="texture_rect.html#TextureRectPtr"><span class="Identifier">TextureRectPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span>
+    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
 <a id="loadTexture.e,TextureRectPtr,cstring"></a>
 <dt><pre><span class="Keyword">method</span> <a href="#loadTexture.e%2CTextureRectPtr%2Ccstring"><span class="Identifier">loadTexture</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_rect.html#TextureRectPtr"><span class="Identifier">TextureRectPtr</span></a><span class="Other">;</span> <span class="Identifier">file</span><span class="Other">:</span> <span class="Identifier">cstring</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">GLerror</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
@@ -223,6 +241,30 @@ function main() {
 
 
 </dd>
+<a id="setTextureFilter.e,TextureRectPtr,ColorRef"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#setTextureFilter.e%2CTextureRectPtr%2CColorRef"><span class="Identifier">setTextureFilter</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_rect.html#TextureRectPtr"><span class="Identifier">TextureRectPtr</span></a><span class="Other">;</span> <span class="Identifier">color</span><span class="Other">:</span> <a href="color.html#ColorRef"><span class="Identifier">ColorRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
+<a id="setTextureAnchor.e,TextureRectPtr,AnchorRef"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#setTextureAnchor.e%2CTextureRectPtr%2CAnchorRef"><span class="Identifier">setTextureAnchor</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_rect.html#TextureRectPtr"><span class="Identifier">TextureRectPtr</span></a><span class="Other">;</span> <span class="Identifier">anchor</span><span class="Other">:</span> <a href="anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
+<a id="setTextureAnchor.e,TextureRectPtr,float,float,float,float"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#setTextureAnchor.e%2CTextureRectPtr%2Cfloat%2Cfloat%2Cfloat%2Cfloat"><span class="Identifier">setTextureAnchor</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_rect.html#TextureRectPtr"><span class="Identifier">TextureRectPtr</span></a><span class="Other">;</span> <span class="Identifier">x1</span><span class="Other">,</span> <span class="Identifier">y1</span><span class="Other">,</span> <span class="Identifier">x2</span><span class="Other">,</span> <span class="Identifier">y2</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+
+</dd>
 
 </dl></div>
 
@@ -233,7 +275,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-19 14:46:49 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-23 06:30:45 UTC</small>
       </div>
     </div>
   </div>
